2006-12-11 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by Nick Lott:
	* avrdude.conf.in: Fix signature for ATmega8515.
	Closes bug #18348: ATMEGA8515 Signature is wrong in avrdude.conf

2006-12-11 Joerg Wunsch <j@uriah.heep.sax.de>

	* avr.c: Fix a bug introduced in rev. 1.69, when implementing the
	fallback from each programmer's paged_load() or paged_write()
	method, respectively.  The return value needs to be checked for
	being greater or equal than 0 rather equal to 0 in order to
	assume the operation has been successful.
	Fixes bug #18489: avrdude is too slow (20 byte/s)

2006-12-11 Joerg Wunsch <j@uriah.heep.sax.de>

	* avr910.c: Make the code compile warning-free:  
	- declare a dummy "struct timezone" for some Win32 systems (MinGW)
	- fix a few printf() argument types
	- get rid off the prevailing "all filedescriptors are of type int"
	  attitude
	The last item required a large sweep across the code, in order to
	replace all "int fd"s by "struct filedescriptor *fd"s, and pass
	pointers (as we cannot pass a union directly).  In return, the
	code is now supposed to be fully 64-bit safe, rather than relying
	on a 64-bit pointer being converted to a (32-bit) int and back
	to a pointer as we did previously.
	* butterfly.c: (Ditto.)
	* jtagmkI.c: (Ditto.)
	* jtagmkII.c: (Ditto.)
	* lists.c: (Ditto.)
	* par.c: (Ditto.)
	* pgm.h: (Ditto.)
	* ppi.c: (Ditto.)
	* ppi.h: (Ditto.)
	* ppiwin.c: (Ditto.)
	* ser_posix.c: (Ditto.)
	* ser_win32.c: (Ditto.)
	* serbb_posix.c: (Ditto.)
	* serbb_win32.c: (Ditto.)
	* serial.h: (Ditto.)
	* stk500.c: (Ditto.)
	* stk500v2.c: (Ditto.)
	* usb_libusb.c: (Ditto.)

2006-11-23 Joerg Wunsch <j@uriah.heep.sax.de>

	Implement EEPROM access through debugWire.
	* jtagmkII.c: Extend the jtagmkII_read_byte() and
	jtagmkII_write_byte() methods to handle EEPROM through
	debugWire.
	* avrpart.h: Implement the "flash instruction" parameter.
	* config_gram.y: (Ditto.)
	* lexer.l: (Ditto.)
	* avrdude.conf.in: (Ditto.)